# VKBot-Vanessa

./: .gitignor  .gitignore  DockerFile  Dockerfile  README.md  confidential_info.py  constants.py  main.py  pyproject.toml  requirements.txt  run.py  vanessas_comands.py
src/: __init__.py  bot.py  client.py  config.py  constans.py  constants.py  main.py  rules.py  services.py  session.py
src/handlers/: __init__.py  chat.py  custom.py  ping.py  randomize.py  wiki.py
src/rules/: base.py  decorator.py  dice.py  rules.py
src/services/: __init__.py  add_command.py  commads_list.py  commands.py  custom_commands.py  events.py  mute.py  randomize.py  schemas.py  vk.py  wiki.py
src/utils/: __init__.py  actions.py  config.py  connection.py  constants.py  controller.py  custom_commands.py  custom_messages.py  database.py  decorators.py  events.py  exceptions.py  queries.py  status_cods.py  validators.py  vk.py  web_query.py
tests/: README.md  test_add_command.py  test_cabbagesite.py  test_config.py  test_connection.py  test_databae.py  test_events.py  test_mute.py  test_simple_commands.py  test_wiki.py  tests_controller.py  vars_for_test.py
vanessa/: .gitignore  actions.py  commands_list.py  connection.py  filtring.py  links.py  main.py  navigation.py  response.py  vanessas_config.py
vanessa/basic_actions/: actions.py  controller.py  database.py  response.py
vanessa/commands_logic/: add_command.py  cabbagesite.py  mute.py  randomize.py  wiki.py
vanessa/connection_to_vk/: connection.py
vanessa/default_commands/: commands_list.py  links.py
(+7 files in other folders)
