[tool.poetry]
name = "vkbot-vanessa"
version = "0.1.0"
description = ""
authors = ["Yevgeniy Kap <kapustaevg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
vkbottle = "^4.3.12"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
